attempted fix for content overlap at certain screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,10 +254,9 @@ h4 {
         font-size: 300%;
     }
 }
-
-@media screen and (max-width: 1400px) {
-    .card{
-        margin: 8px;
+@media screen and (min-width: 1400px) {
+    .grid-margin-y {
+        margin-top: 10rem;
     }
-    
 }
+
